# movdata

./: pyproject.toml
src/movdata/: .ml_copy.py.swp  ml.py  ml_copy.py  movieinfo.py
tests/: test_ml.py
